styles/pages/amazon.css
* {
  box-sizing: border-box;
}

ul {
  padding: 0;
}

a {
  text-decoration: none;
  color: #ffffff;
}

.header__bottom {
  margin-top: 60px;
  background-color: #232f3f;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
}


.menu {
  display: flex;
  justify-content: space-around;
  align-items: center;
  max-width: 1440px;
  height: 39px;
  margin: 0 auto;
}



.menu__section {
  font-weight: 500;
  font-size: 14px;
  color: #ffffff;
  display: flex;
  align-items: center;
  gap: 4px;
}

.menu__filtration {
  display: none;
}

.reviews-img {
  width: 100px;
}
.main__wrapper {
  display: flex;
  justify-content: space-between;
  margin-top: 99px;
}


.filter__wrapper {
  display: flex;
  flex-direction: column;
  min-width: 230px;
}

.filtration__header {
  margin-top: 20px;
  font-weight: 900;
  font-size: 24px;
  text-align: center;
}

.filter__section {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  
  padding: 5px;
}



@media (max-width: 680px) {
  .menu__filtration {
    background: none;
    border: none;
    font-weight: 500;
    font-size: 14px;
    color: #ffffff;
    display: flex;
    align-items: center;
    gap: 4px;
  }

  .filter__wrapper {
    position: fixed;
    top: 99px;
    right: 100%;
    width: 100%;
    height: 100vh;
    background-color: #ffffff;  
    transition: right 0.4s;
  }

  .filter__wrapper-is-active {
    right: 0;
    border: 1px solid rgb(231, 231, 231);
  } 
}



@media (max-width: 420px) {
  .menu__section, .menu__filtration {
    font-size: 10px;
  }
}

.products-grid {
  display: grid;

  /* - In CSS Grid, 1fr means a column will take up the
       remaining space in the grid.
     - If we write 1fr 1fr ... 1fr; 8 times, this will
       divide the grid into 8 columns, each taking up an
       equal amount of the space.
     - repeat(8, 1fr); is a shortcut for repeating "1fr"
       8 times (instead of typing out "1fr" 8 times).
       repeat(...) is a special property that works with
       display: grid; */
  grid-template-columns: repeat(8, 1fr);
}

/* @media is used to create responsive design (making the
   website look good on any screen size). This @media
   means when the screen width is 2000px or less, we
   will divide the grid into 7 columns instead of 8. */
@media (max-width: 2000px) {
  .products-grid {
    grid-template-columns: repeat(7, 1fr);
  }
}

/* This @media means when the screen width is 1600px or
   less, we will divide the grid into 6 columns. */
@media (max-width: 1600px) {
  .products-grid {
    grid-template-columns: repeat(6, 1fr);
  }
}

@media (max-width: 1300px) {
  .products-grid {
    grid-template-columns: repeat(5, 1fr);
  }
}

@media (max-width: 1000px) {
  .products-grid {
    grid-template-columns: repeat(4, 1fr);
  }
}

@media (max-width: 800px) {
  .products-grid {
    grid-template-columns: repeat(3, 1fr);
  }
}

@media (max-width: 575px) {
  .products-grid {
    grid-template-columns: repeat(2, 1fr);
  }
}

@media (max-width: 450px) {
  .main__wrapper {
    display: flex;
    justify-content: center;
  }
  .products-grid {
    grid-template-columns: 1fr;
  }
}

.product-container {
  padding-top: 40px;
  padding-bottom: 25px;
  padding-left: 25px;
  padding-right: 25px;
  border: 1px solid rgb(231, 231, 231);

  display: flex;
  flex-direction: column;
}


@media (max-width: 450px) {
  .product-container {
    border: none;
  }
}

.product-image-container {
  display: flex;
  justify-content: center;
  align-items: center;

  height: 180px;
  margin-bottom: 20px;
}

.product-image {
  /* Images will overflow their container by default. To
    prevent this, we set max-width and max-height to 100%
    so they stay inside their container. */
  max-width: 100%;
  max-height: 100%;
}

.product-name {
  height: 40px;
  margin-bottom: 5px;
}

.product-rating-container {
  display: flex;
  align-items: center;
  margin-bottom: 10px;
}

.product-rating-stars {
  width: 100px;
  margin-right: 6px;
}

.product-rating-count {
  color: rgb(1, 124, 182);
  cursor: pointer;
  margin-top: 3px;
}

.product-price {
  font-weight: 700;
  margin-bottom: 10px;
}

.product-quantity-container {
  margin-bottom: 17px;
}

.product-spacer {
  flex: 1;
}

.added-to-cart {
  color: rgb(6, 125, 98);
  font-size: 16px;

  display: flex;
  align-items: center;
  margin-bottom: 8px;

  /* At first, the "Added to cart" message will
     be invisible. Use JavaScript to change the
     opacity and make it visible. */
  opacity: 0;
}

.js-added-to-cart-visible {
  opacity: 1;
}

.added-to-cart img {
  height: 20px;
  margin-right: 5px;
}

.add-to-cart-button, .filtration-button {
  width: 100%;
  padding: 8px;
  border-radius: 50px;
}


.filtration-button-container {
  display: flex;
  justify-content: center;
}


.filtration-button {
  max-width: 100px;
}



.pagination-list {
  text-decoration: none;
  list-style-type: none;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
}

.pagination-list li {
  padding: 10px;
}



.pagination-list button {
  color: black;
  float: left;
  padding: 8px 16px;
  text-decoration: none;
  border: none;
  border-radius: 5px;
  background-color: rgb(255, 216, 20);
}


.pagination-list button:hover {
  background-color: rgb(237, 198, 2);
}

.pagination a.active {
  background-color: #4CAF50;
  color: white;
}

